@@ -46,7 +46,6 @@ Known issues
 -   Filters and settings from deconstruction planners from blueprint library cannot be applied to unapproved ghost entities. This is limtiation on the game's modding API. The mod will instead opt to delete all unapproved ghosts from the selected area.
 -   Underground belt rotation can get messed-up when approving/unapproving ghost entities. Due to how game engine handles underground belt orientation (preventing inconsistencies for belts of the same force), it is not possible to fix this via mod.
 -   Underground belt rotation might not always rotate the most obvious underground belt.
--   Unapproved ghosts replaced by railways might not end-up on the undo queue and can produce spurious placeholder ghosts.
 
 
 Roadmap
