@@ -5,6 +5,7 @@ Date: 9999-99-99
   Features:
   Bugfixes:
     - Fixed placeholders staying behind when canceling deconstruction of entities that do not overlap with the placeholder entity itself.
+    - Fixed placeholders staying behind when "quick-building" rails.
     - Fixed undo queue with unapproved ghosts not being preserved correctly when canceling deconstruction.
 ---------------------------------------------------------------------------------------------------
 Version: 1.3.0
